# orch

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  README.md  TECHNICAL_IMPLEMENTATION.md  TODO.md
orch_action/: .gitignore  CONTRIBUTING.md  README.md  action.yml  example-workflow.yml  package-lock.json  package.json
orch_action/.github/workflows/: ci.yml
orch_action/src/: comments.ts  diff.ts  ignore.ts  index.ts  review.ts
orch_agent/: .gitignore  CONTRIBUTING.md  README.md  agent.py  alert.py  analyzer.py  config.py  main.py  notifier.py  pyproject.toml  requirements.txt  tray.py  watcher.py
orch_agent/orch_agent/: __init__.py  agent.py  alert.py  analyzer.py  config.py  notifier.py  tray.py  watcher.py
orch_cli/: .gitignore  CONTRIBUTING.md  README.md  orch.py  pyproject.toml
orch_cli/.github/workflows/: ci.yml
orch_core/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  migrate.py  requirements.txt  seed.py
orch_core/.github/workflows/: ci.yml
orch_core/app/: app.py  config.py  logging.py
orch_core/app/api/: deps.py
orch_core/app/core/: constraint_loader.py  context_manager.py  domain_router.py  health_scorer.py  model_registry.py  model_resolver.py  pipeline.py  rag_retriever.py  slugify.py
orch_core/app/db/: client.py
orch_core/app/models/: errors.py  schemas.py
orch_core/app/security/: injection.py  middleware.py
orch_core/app/services/: cache.py  embeddings.py  encryption.py  llm.py  rate_limiter.py  summarizer.py
orch_core/app/workers/: constraint_indexer.py  health_worker.py  persistence.py
orch_core/prisma/: schema.prisma
orch_core/tests/unit/: test_constraint_loader.py  test_context_manager.py  test_health_scorer.py  test_model_resolver.py  test_rate_limiter.py  test_security.py
orch_dashboard/: CONTRIBUTING.md  SECURITY.md  package-lock.json  package.json  proxy.ts
orch_dashboard/.github/workflows/: ci.yml
orch_dashboard/app/: globals.css  layout.tsx  providers.tsx
orch_dashboard/app/(auth)/: layout.tsx
orch_dashboard/app/(dashboard)/: layout.tsx  page.tsx
orch_dashboard/app/actions/: onboarding.ts
orch_dashboard/components/chat/: InputBar.tsx  MessageList.tsx
orch_dashboard/components/layout/: Header.tsx  OrgSwitcher.tsx  PageShell.tsx  RouteGuard.tsx  Sidebar.tsx  ThemeProvider.tsx
orch_dashboard/hooks/: useOrchStatus.ts  useRole.ts
orch_dashboard/lib/: api.ts  auth.ts  clerkAppearance.ts  gate.ts  utils.ts
orch_dashboard/stores/: chatStore.ts
orch_dashboard/types/: index.ts
orch_extension/: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
orch_extension/src/: agentDetector.ts  api.ts  autoConfig.ts  config.ts  diagnostics.ts  extension.ts  panel.ts  statusBar.ts
(+55 files in other folders)
