[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orch-agent"
version = "0.1.0"
description = "Background file watcher for Orch — governance over all AI, regardless of source."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Orch", email = "hello@orch.dev" }]
keywords = ["ai", "governance", "code-review", "file-watcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
windows = ["win10toast>=0.9"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/orch-dev/orch-agent"
Repository = "https://github.com/orch-dev/orch-agent"
Issues = "https://github.com/orch-dev/orch-agent/issues"

[project.scripts]
orch-agent = "orch_agent.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orch_agent*"]
