[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orch-cli"
version = "0.1.0"
description = "Developer CLI for Orch — governance over all AI, regardless of source."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Orch", email = "hello@orch.dev" }]
keywords = ["ai", "governance", "cli", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/orch-dev/orch-cli"
Repository = "https://github.com/orch-dev/orch-cli"
Issues = "https://github.com/orch-dev/orch-cli/issues"

[project.scripts]
orch = "orch:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["orch*"]
